# wordsearch

./: .gitignore  SECURITY.md  hello.py  pyproject.toml
.github/workflows/: publish.yml  test.yml  test_build.yml
src/: wordsearch.py
src/py_wordsearch_gen/: arguments.py  consts.py  wordsearch.py
src/wordsearch/: wordsearch.py
tests/: test_wordsearch.py
