[project]
name = "wordsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.9.4",
]
[tool.ruff]
target-version = "py312"
# Allow lines to be as long as 120 characters.
line-length = 120
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # imports
]


lint.ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

exclude = [
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true